--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <packages>
-	<!--<package id="NUnit" version="2.5.10.11092" allowedVersion="(2, 3)" />-->
+	<package id="NUnit" version="2.5.10.11092" allowedVersion="(2, 3)" />
 </packages>
